--- a/ColecciondeJuegos/Base.lproj/Main.storyboard
+++ b/ColecciondeJuegos/Base.lproj/Main.storyboard
@@ -1,24 +1,149 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aGz-AQ-D53">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="ColecciondeJuegos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ZVe-4x-rD2">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ZVe-4x-rD2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Mdx-U7-ehd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZVe-4x-rD2" secondAttribute="bottom" id="ZHY-oy-4yy"/>
+                            <constraint firstItem="ZVe-4x-rD2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="lTa-2S-7cY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZVe-4x-rD2" secondAttribute="trailing" id="yxf-IL-kz0"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="us0-WQ-kaR">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="TCb-Ob-tvK">
+                            <connections>
+                                <segue destination="9zF-L7-e6n" kind="show" identifier="juegoSegue" id="oZf-0D-g6Z"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="ZVe-4x-rD2" id="WTZ-W5-dQ2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="939.13043478260875" y="53.571428571428569"/>
+        </scene>
+        <!--Juegos View Controller-->
+        <scene sceneID="J57-ax-5RI">
+            <objects>
+                <viewController id="9zF-L7-e6n" customClass="JuegosViewController" customModule="ColecciondeJuegos" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qBk-jY-j1l">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EQm-h2-jZN">
+                                <rect key="frame" x="67" y="120" width="280" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="FAc-Ks-Gfd"/>
+                                    <constraint firstAttribute="width" constant="280" id="Jwp-DE-PLs"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingrese Titulo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ct6-Jo-D0U">
+                                <rect key="frame" x="67" y="290" width="280" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kAF-bQ-FVW">
+                                <rect key="frame" x="169" y="357" width="76" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Agregar"/>
+                                <connections>
+                                    <action selector="agregarTapped:" destination="9zF-L7-e6n" eventType="touchUpInside" id="xLx-9k-8S7"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4AR-KV-oIR">
+                                <rect key="frame" x="169" y="411" width="76" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Eliminar"/>
+                                <connections>
+                                    <action selector="agregarTapped:" destination="9zF-L7-e6n" eventType="touchUpInside" id="Tjn-s0-OVb"/>
+                                    <action selector="eliminarTapped:" destination="9zF-L7-e6n" eventType="touchUpInside" id="4yM-zN-cTz"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="yaI-n0-xVW"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="EQm-h2-jZN" firstAttribute="centerX" secondItem="qBk-jY-j1l" secondAttribute="centerX" id="5KA-F5-pDm"/>
+                            <constraint firstItem="ct6-Jo-D0U" firstAttribute="centerX" secondItem="qBk-jY-j1l" secondAttribute="centerX" id="Cyj-ub-pAI"/>
+                            <constraint firstItem="kAF-bQ-FVW" firstAttribute="centerX" secondItem="qBk-jY-j1l" secondAttribute="centerX" id="EZo-eI-6rL"/>
+                            <constraint firstItem="EQm-h2-jZN" firstAttribute="top" secondItem="yaI-n0-xVW" secondAttribute="top" constant="32" id="Pgp-S2-sRO"/>
+                            <constraint firstItem="ct6-Jo-D0U" firstAttribute="width" secondItem="EQm-h2-jZN" secondAttribute="width" id="bkW-Tc-sEf"/>
+                            <constraint firstItem="4AR-KV-oIR" firstAttribute="centerX" secondItem="qBk-jY-j1l" secondAttribute="centerX" id="fwE-TX-esD"/>
+                            <constraint firstItem="kAF-bQ-FVW" firstAttribute="top" secondItem="ct6-Jo-D0U" secondAttribute="bottom" constant="33" id="lYX-d3-fXj"/>
+                            <constraint firstItem="4AR-KV-oIR" firstAttribute="top" secondItem="kAF-bQ-FVW" secondAttribute="bottom" constant="23" id="rwV-i4-gn8"/>
+                            <constraint firstItem="ct6-Jo-D0U" firstAttribute="top" secondItem="EQm-h2-jZN" secondAttribute="bottom" constant="20" id="yDQ-Uc-WIK"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="JNu-Lk-VZM">
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="camera" id="8b7-1h-iRX">
+                                <connections>
+                                    <action selector="camaraTapped:" destination="9zF-L7-e6n" id="gCp-lp-2eK"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Fotos" id="tXC-ZO-nFg">
+                                <connections>
+                                    <action selector="fotosTapped:" destination="9zF-L7-e6n" id="9FY-dW-cJK"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="agregarActualizarButton" destination="kAF-bQ-FVW" id="qZS-Vr-Jss"/>
+                        <outlet property="eliminarBoton" destination="4AR-KV-oIR" id="ztk-0c-n1A"/>
+                        <outlet property="imagen" destination="EQm-h2-jZN" id="kLN-0P-MiT"/>
+                        <outlet property="tituloTextField" destination="ct6-Jo-D0U" id="SWj-dD-aDZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xid-vx-qOh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1723" y="54"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="eVJ-mS-y3O">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aGz-AQ-D53" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="b3G-Xt-Lci">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="37X-RA-a81"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="If7-Hi-FeD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-229" y="42"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
